hbs view engine

--- a/session7-express/frontend/views/home.hbs
+++ b/session7-express/frontend/views/home.hbs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hbs</title>
+    {{!-- <link rel="stylesheet" href="../../public/css/style.css"> --}}
 </head>
 <body>
-    <h2 style="color: blue;">Hello hbs</h2>
+    <h2>Home hbs</h2>
 </body>
+
+{{!-- <script src="js/script.js"></script> --}}
 </html>
