--- a/session7-express/expressApp/public/layouts/navbar.hbs
+++ b/session7-express/expressApp/public/layouts/navbar.hbs
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/add">Add</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/addPost">Add Post</a>
+        </li>
       </ul>
       </div>
   </div>
