--- a/session7-express/expressApp/public/views/all.hbs
+++ b/session7-express/expressApp/public/views/all.hbs
@@ -6,23 +6,26 @@
         <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Age</th>
             <th>Email</th>
+            <th>Age</th>
             <th>Actions</th>
         </tr>
     </thead>
     <tbody>
+        {{#each users}}
+        {{!-- same as forEach --}}
         <tr>
-            <td>1</td>
-            <td>Marwa</td>
-            <td>22</td>
-            <td>marwa@gmail.com</td>
+            <td>{{this.id}}</td>
+            <td>{{this.name}}</td>
+            <td>{{this.email}}</td>
+            <td>{{this.age}}</td>
             <td>
-                <a href="/single/1" class="btn btn-success mx-2">Show</a>
-                <a href="/edit/1" class="btn btn-warning mx-2">Edit</a>
-                <a href="/del/1" class="btn btn-danger mx-2">Delete</a>
+                <a href="/single/{{this.id}}" class="btn btn-success mx-2">Show</a>
+                <a href="/edit/{{this.id}}" class="btn btn-warning mx-2">Edit</a>
+                <a href="/del/{{this.id}}" class="btn btn-danger mx-2">Delete</a>
             </td>
         </tr>
+        {{/each}}
     </tbody>
 </table>
 
