--- a/session7-express/expressApp/public/views/edit.hbs
+++ b/session7-express/expressApp/public/views/edit.hbs
@@ -1,19 +1,33 @@
 {{>header}}
 {{>navbar}}
 
-    <form>
+{{#if isEmpty}}
+    <div class="alert alert-danger">User not found</div>
+{{else}}
+
+    <form method="post">
         <div class="mb-3">
-            <input placeholder="Name" name="name" class="form-control" value="{{user.name}}">
+            <input placeholder="Name" name="name" class="form-control my-2" value="{{user.name}}">
+            {{#if errors.name}}
+            <p class="alert alert-danger my-2">{{errors.name}}</p>
+            {{/if}}
         </div>
         <div class="mb-3">
-            <input placeholder="Email" name="email" class="form-control" value="{{user.email}}">
+            <input placeholder="Email" name="email" class="form-control my-2" value="{{user.email}}">
+            {{#if errors.email}}
+            <p class="alert alert-danger my-2">{{errors.email}}</p>
+            {{/if}}
         </div>
         <div class="mb-3">
-            <input placeholder="Age" name="age" class="form-control" value="{{user.age}}">
+            <input placeholder="Age" name="age" class="form-control my-2" value="{{user.age}}">
+            {{#if errors.age}}
+            <p class="alert alert-danger my-2">{{errors.age}}</p>
+            {{/if}}
         </div>
         <div class="mb-3">
             <button class="btn btn-primary">Save</button>
         </div>
     </form>
 
+{{/if}}
 {{>footer}}
