--- a/session7-express/expressApp/public/views/single.hbs
+++ b/session7-express/expressApp/public/views/single.hbs
@@ -1,29 +1,34 @@
 {{>header}}
 {{>navbar}}
 
+{{#if isEmpty}}
+    <div class="alert alert-danger">User not found</div>
+{{else}}
+
 <table class="table table-bordered">
     <thead>
         <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Age</th>
             <th>Email</th>
+            <th>Age</th>
             <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>Marwa</td>
-            <td>22</td>
-            <td>marwa@gmail.com</td>
+            <td>{{user.id}}</td>
+            <td>{{user.name}}</td>
+            <td>{{user.email}}</td>
+            <td>{{user.age}}</td>
             <td>
-                <a href="/single/1" class="btn btn-success mx-2">Show</a>
-                <a href="/edit/1" class="btn btn-warning mx-2">Edit</a>
-                <a href="/del/1" class="btn btn-danger mx-2">Delete</a>
+                {{!-- <a href="/single/1" class="btn btn-success mx-2">Show</a> --}}
+                <a href="/edit/{{user.id}}" class="btn btn-warning mx-2">Edit</a>
+                <a href="/del/{{user.id}}" class="btn btn-danger mx-2">Delete</a>
             </td>
         </tr>
     </tbody>
 </table>
 
+{{/if}}
 {{>footer}}
