--- a/session16/src/app/app.component.html
+++ b/session16/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container my-5">
+<div class="container my-5 align-items-center justify-content-center">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
