--- a/session16/src/app/pages/login/login.component.html
+++ b/session16/src/app/pages/login/login.component.html
@@ -1,17 +1,28 @@
-<div class="container my-3">
-    <form>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+<div class="alert alert-warning mb-3" *ngIf="login.invalid && login.submitted">
+    Please check your inputs
 </div>
+
+<form #login="ngForm" (ngSubmit)="handleLogin(login)">
+    
+    <div class="mb-3">
+        <label class="form-label">Email address</label>
+        <input [(ngModel)]="userData.email" name="email" type="email" class="form-control" required email #email="ngModel" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+        <div class="alert alert-danger my-2" *ngIf="email.invalid && (email.dirty || email.touched || login.submitted)">
+            <span *ngIf="email.errors?.['required']">Email is required</span>
+            <span *ngIf="email.errors?.['pattern']">Invalid email format</span>
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input [(ngModel)]="userData.password" name="password" type="password" class="form-control" #password="ngModel" required>
+        <!-- pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" -->
+        <div class="alert alert-danger my-2" *ngIf="password.invalid && (password.dirty || password.touched || login.submitted)">
+            <span *ngIf="password.errors?.['required']">Password is required</span>
+            <!-- <span *ngIf="password.errors?.['pattern']">Weak password (Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters)</span> -->
+        </div>
+    </div>
+    
+    <button class="btn btn-primary">Login</button>
+
+</form>
