--- a/session16/src/app/pages/register/register.component.html
+++ b/session16/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <!-- template-driven form / Reactive form -->
-<div class="alert alert-danger" *ngIf="register.invalid && register.submitted">
+<div class="alert alert-warning mb-3" *ngIf="register.invalid && register.submitted">
     <!-- valid=>{{register.valid}}<br>
     invalid=>{{register.invalid}}<br>
     submitted=>{{register.submitted}}<br>
@@ -8,47 +8,53 @@
     Please check your inputs
 </div>
 
-<form #register="ngForm" (ngSubmit)="handleregister(register)">
-    <div class="mb-3 col-sm-9">
+<form #register="ngForm" (ngSubmit)="handleRegister(register)">
+    <div class="mb-3">
         <label class="form-label">Username</label>
-        <input ngModel name="username" type="text" class="form-control" required minlength="3" maxlength="20" #name="ngModel">
+        <input [(ngModel)]="userData.name" name="username" type="text" class="form-control" required minlength="3" maxlength="20" #name="ngModel">
         <div class="alert alert-danger my-2" *ngIf="name.invalid && (name.dirty || name.touched || register.submitted)">
             <span *ngIf="name.errors?.['required']">Userame is required</span>
             <span *ngIf="name.errors?.['minlength']">Userame must be more than 2 characters</span>
         </div>
     </div>
 
-    <div class="mb-3 col-sm-9">
+    <div class="mb-3">
         <label class="form-label">Email</label>
-        <input ngModel name="email" type="email" class="form-control" aria-describedby="emailHelp" required email #email="ngModel" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+        <input [(ngModel)]="userData.email" name="email" type="email" class="form-control" required email #email="ngModel" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
         <div class="alert alert-danger my-2" *ngIf="email.invalid && (email.dirty || email.touched || register.submitted)">
             <span *ngIf="email.errors?.['required']">Email is required</span>
             <span *ngIf="email.errors?.['pattern']">Invalid email format</span>
         </div>
     </div>
 
-    <div class="mb-3 col-sm-9">
+    <div class="mb-3">
         <label class="form-label">Password</label>
-        <input ngModel name="password" type="password" class="form-control" required password #password="ngModel">
+        <input [(ngModel)]="userData.password" name="password" type="password" class="form-control" required #password="ngModel">
+        <!-- pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" -->
         <div class="alert alert-danger my-2" *ngIf="password.invalid && (password.dirty || password.touched || register.submitted)">
             <span *ngIf="password.errors?.['required']">Password is required</span>
-            <span *ngIf="password.errors?.['password']">Weak password</span>
+            <!-- <span *ngIf="password.errors?.['pattern']">Weak password (Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters)</span> -->
         </div>
     </div>
 
-    <div class="mb-3 col-sm-9">
+    <div class="mb-3">
         <label class="form-label">Gender</label>
         <div class="form-check">
-            <input ngModel name="gender" class="form-check-input" type="radio" value="male">Male
+            <input [(ngModel)]="userData.gender" name="gender" class="form-check-input" type="radio" value="male">Male
         </div>
         <div class="form-check">
-            <input ngModel name="gender" class="form-check-input" type="radio" value="female">Female
+            <input [(ngModel)]="userData.gender" name="gender" class="form-check-input" type="radio" value="female">Female
         </div>
     </div>
 
-    <div class="mb-3 col-sm-9">
+    <div class="mb-3">
         <label class="form-label">Age</label>
-        <input ngModel name="age" type="text" class="form-control">
+        <input [(ngModel)]="userData.age" name="age" type="text" class="form-control" required #age="ngModel">
+        <div class="alert alert-danger my-2" *ngIf="(age.invalid || userData.age < 20 || userData.age > 65) && (age.dirty || age.touched || register.submitted)">
+            <span *ngIf="age.errors?.['required']">Age is required</span>
+            <span *ngIf="userData.age < 20">Age must be greater than 20</span>
+            <span *ngIf="userData.age > 65">Age must be less than 65</span>
+        </div>
     </div>
 
 
